; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_futils.c_git_futils_canonical_mode.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_futils.c_git_futils_canonical_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_IFREG = common dso_local global i32 0, align 4
@S_IFLNK = common dso_local global i32 0, align 4
@S_IFGITLINK = common dso_local global i32 0, align 4
@S_IFDIR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_futils_canonical_mode(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @S_ISREG(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32, i32* @S_IFREG, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @GIT_PERMS_CANONICAL(i32 %9)
  %11 = or i32 %8, %10
  store i32 %11, i32* %2, align 4
  br label %31

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = call i64 @S_ISLNK(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %12
  %17 = load i32, i32* @S_IFLNK, align 4
  store i32 %17, i32* %2, align 4
  br label %31

18:                                               ; preds = %12
  %19 = load i32, i32* %3, align 4
  %20 = call i64 @S_ISGITLINK(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load i32, i32* @S_IFGITLINK, align 4
  store i32 %23, i32* %2, align 4
  br label %31

24:                                               ; preds = %18
  %25 = load i32, i32* %3, align 4
  %26 = call i64 @S_ISDIR(i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %24
  %29 = load i32, i32* @S_IFDIR, align 4
  store i32 %29, i32* %2, align 4
  br label %31

30:                                               ; preds = %24
  store i32 0, i32* %2, align 4
  br label %31

31:                                               ; preds = %30, %28, %22, %16, %7
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i64 @S_ISREG(i32) #1

declare dso_local i32 @GIT_PERMS_CANONICAL(i32) #1

declare dso_local i64 @S_ISLNK(i32) #1

declare dso_local i64 @S_ISGITLINK(i32) #1

declare dso_local i64 @S_ISDIR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
